--- a/index.html
+++ b/index.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/d3e5906fa5.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/d3e5906fa5.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Instagram</title>
-    <link rel="icon" type="image/jpg" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png"/>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/jpg"
+      href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png"
+    />
+  </head>
+  <body>
     <div class="box">
-        <div class="celular">
-            <img src="/Tela inicial instagram/img/insta_celular.jpg" alt="celular">
+      <div class="celular">
+        <img src="./img/instaCelular.jpg" alt="celular" />
+      </div>
+      <div class="main">
+        <div class="login">
+          <img src="./img/instagramLogo.jpg" alt="logo" />
+
+          <input type="text" placeholder="Telefone, nome de usuário ou email" />
+          <input type="text" placeholder="Senha" />
+          <button disa>Entrar</button>
+          <span class="ou">OU</span>
+          <span class="link1">
+            <i class="fab fa-facebook-square"></i>
+            <a href="facebook.com">Entrar com o Facebook</a>
+          </span>
+          <span class="link2">
+            <a href="#">Esqueceu a senha?</a>
+          </span>
         </div>
-        <div class="main">
-            <div class="login">
-                <img src="/Tela inicial instagram/img/instagram-logo.png" alt="logo">
 
-                <input type="text" placeholder="Telefone, nome de usuário ou email">
-                <input type="text" placeholder="Senha">
-                <button disa>Entrar</button>
-                <span class="ou">OU</span>
-                <span class="link1">
-                    <i class="fab fa-facebook-square"></i>
-                    <a href="facebook.com">Entrar com o Facebook</a>
-                </span>
-                <span class="link2">
-                    <a href="#">Esqueceu a senha?</a>
-                </span>
-            </div>
-
-            <div class="cadastrar">
-                <span>Não tem uma conta? <a href="#">Cadastre-se</a></span>
-            </div>
-
-            <div class="app">
-                <span>Obtenha o aplicativo.</span>
-                <a href="#">
-                    <img src="/Tela inicial instagram/img/apple-button.png" alt="app store">
-                </a>
-                <a href="#">
-                    <img src="/Tela inicial instagram/img/googleplay-button.png" alt="play store">
-                </a>
-            </div>
+        <div class="cadastrar">
+          <span>Não tem uma conta? <a href="#">Cadastre-se</a></span>
         </div>
-         
+
+        <div class="app">
+          <span>Obtenha o aplicativo.</span>
+          <a href="#">
+            <img src="./img/appleButton.jpg" alt="app store" />
+          </a>
+          <a href="#">
+            <img src="./img/googleplayButton.jpg" alt="play store" />
+          </a>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
